--- a/Wake Up With/Base.lproj/Main.storyboard
+++ b/Wake Up With/Base.lproj/Main.storyboard
@@ -1,24 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5sA-Wb-1gU">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Register View Controller-->
+        <scene sceneID="j5E-iV-K1h">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="31I-cC-KGu" customClass="RegisterViewController" customModule="Wake_Up_With" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Opf-RY-cW2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="56072a6ab90427a5edd4319c9c018574b1ef2074_hq" highlightedImage="29c809166f44056d088d6dc62bee7593" translatesAutoresizingMaskIntoConstraints="NO" id="OXD-5E-OWS">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmO-up-NoL">
+                                <rect key="frame" x="0.0" y="310.5" width="375" height="45"/>
+                                <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="07a-H7-Ncr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Log In with Facebook">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuN-yD-AgC">
+                                <rect key="frame" x="0.0" y="355.5" width="375" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Log In with Email">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="logInWithEmail:" destination="31I-cC-KGu" eventType="touchUpInside" id="UKw-0l-CTw"/>
+                                    <segue destination="Zrd-MC-vM8" kind="show" id="ZYi-tl-exp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FS4-pA-b3y">
+                                <rect key="frame" x="0.0" y="266" width="375" height="45"/>
+                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Log In with Google">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="trailing" secondItem="jpn-y9-D4k" secondAttribute="trailing" id="1A8-bf-iJL"/>
+                            <constraint firstItem="FS4-pA-b3y" firstAttribute="leading" secondItem="jpn-y9-D4k" secondAttribute="leading" id="5gp-qq-JfJ"/>
+                            <constraint firstItem="FS4-pA-b3y" firstAttribute="trailing" secondItem="jpn-y9-D4k" secondAttribute="trailing" id="6KP-M2-8ao"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="trailing" secondItem="jpn-y9-D4k" secondAttribute="trailing" id="8Zo-7d-zyN"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="height" secondItem="FS4-pA-b3y" secondAttribute="height" id="Bai-KE-c5e"/>
+                            <constraint firstItem="xuN-yD-AgC" firstAttribute="trailing" secondItem="jpn-y9-D4k" secondAttribute="trailing" id="KEG-R1-MTB"/>
+                            <constraint firstItem="xuN-yD-AgC" firstAttribute="leading" secondItem="jpn-y9-D4k" secondAttribute="leading" id="LWr-dI-A2E"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="leading" secondItem="jpn-y9-D4k" secondAttribute="leading" id="SxP-gd-xps"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="leading" secondItem="jpn-y9-D4k" secondAttribute="leading" id="bqu-0U-rJQ"/>
+                            <constraint firstItem="xuN-yD-AgC" firstAttribute="height" secondItem="VmO-up-NoL" secondAttribute="height" id="gxH-NB-Edh"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="leading" secondItem="jpn-y9-D4k" secondAttribute="leading" id="hLA-l4-jRg"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="trailing" secondItem="jpn-y9-D4k" secondAttribute="trailing" id="jHQ-tA-XqZ"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="centerY" secondItem="Opf-RY-cW2" secondAttribute="centerY" id="mGT-QR-9DL"/>
+                            <constraint firstItem="xuN-yD-AgC" firstAttribute="top" secondItem="VmO-up-NoL" secondAttribute="bottom" id="t5t-yP-3kU"/>
+                            <constraint firstItem="VmO-up-NoL" firstAttribute="top" secondItem="FS4-pA-b3y" secondAttribute="bottom" id="ubJ-xC-ogg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jpn-y9-D4k"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="4oV-co-Ptc">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="XBy-1Z-G15"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="emailLogInButton" destination="xuN-yD-AgC" id="8Wf-tp-uEa"/>
+                        <outlet property="facebookLogInButton" destination="VmO-up-NoL" id="JkU-3x-52R"/>
+                        <outlet property="googleLogInButton" destination="FS4-pA-b3y" id="gbK-57-YWr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UJz-YP-kAG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="156" y="69.715142428785612"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lf2-Km-UYi">
+            <objects>
+                <viewController id="Zrd-MC-vM8" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nOX-08-dgM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dDR-mv-X8a">
+                                <rect key="frame" x="167" y="250" width="200" height="141"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="Log In" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="e4m-n9-ajV">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="51"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IvP-Qh-Xwb">
+                                        <rect key="frame" x="0.0" y="51" width="200" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MU-yV-r7E">
+                                        <rect key="frame" x="0.0" y="81" width="200" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iLS-XQ-jPy">
+                                        <rect key="frame" x="0.0" y="111" width="200" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqq-zr-7Or">
+                                                <rect key="frame" x="0.0" y="0.0" width="154" height="30"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6L-eT-uU4">
+                                                <rect key="frame" x="154" y="0.0" width="46" height="30"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="7uy-Hy-W4j"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6sI-WO-DcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="941.60000000000002" y="69.715142428785612"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Fhn-DZ-lEA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5sA-Wb-1gU" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="epq-OH-Ls0">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="31I-cC-KGu" kind="relationship" relationship="rootViewController" id="gmP-Hq-buR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZdQ-LP-XuJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-783.20000000000005" y="69.715142428785612"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="29c809166f44056d088d6dc62bee7593" width="1365" height="2048"/>
+        <image name="56072a6ab90427a5edd4319c9c018574b1ef2074_hq" width="1024" height="682"/>
+    </resources>
 </document>
